--- a/src/app/components/acceuil/acceuil.component.html
+++ b/src/app/components/acceuil/acceuil.component.html
@@ -1,52 +1,63 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <header>
+    <app-navbar></app-navbar>
+  </header>
+  <section id="container">
+    <div class="container-text">
+        <h1>L'éducation est un passport pour l'avenir car demain appartient à ceux qui s'y sont préparés aujourd'hui.</h1>
+    </div>
+  </section> 
 
-        <header>
-            <app-navbar></app-navbar>
+  <!-- section a propos -->
+   <section id="a-propos">
+      <div class="presentation">
+          <p class="tittle-section">Presentation</p>
+          <div class="description-photo">
+            <div class="desc">
+                Notre site ".............." a été crée a fin de donner un coup de main
+                pour faciliter leurs études et arrondir les ressources aux étudiant du cycle 
+                licence fondamentales dans la faculté Abdelmalek Essadi Tetouan et qui sont 
+                inscrit dans les différentes filières suivantes :  
+                <ul>
+                    <li>Sciences Mathématiques Appliquées (SMA).</li>
+                    <li>Sciences Mathématiques Informatiques (SMI).</li>
+                    <li>Sciences de la Matière Physique (SMP).</li>
+                    <li>Sciences de la Matière Chimie (SMC).</li>
+                    <li>Sciences de la Vie (SVI).</li>
+                    <li>Sciences de la Terre et de l'Univers (STU).</li>
+                 </ul>   
+                 </div>                                              
+              <img src="/assets/photos/graduation.jpg" >
+              
+          </div>
+      </div>
+      <p class="tittle-section">Suivez-nous</p>
+      <div class="follow">
+        <div class="icons">
+            <a href="#" class="icon icon--instagram">
+              <i class="bi bi-instagram"></i>
+            </a>
+            <a href="#" class="icon icon--twitter">
+              <i class="bi bi-twitter"></i>
+            </a>
+            <a href="#" class="icon icon--facebook">
+              <i class="bi bi-facebook"></i>
+            </a>
+            <a href="#" class="icon icon--github">
+              <i class="bi bi-github"></i>
+            </a>
+          </div>
+        </div>
+  </section>       
 
-		</header>	
-        <section id="container">
-            <div class="container-text">
-                <h1>L'éducation est un passport pour l'avenir car demain appartient à ceux qui s'y sont préparés aujourd'hui.</h1>
-            </div>
-          </section> 
-      
-          <!-- section a propos -->
-           <section id="a-propos">
-              <div class="presentation">
-                  <p class="tittle-section">Presentation</p>
-                  <div class="description-photo">
-                    <div class="desc">
-                        Notre site ".............." a été crée a fin de donner un coup de main
-                        pour faciliter leurs études et arrondir les ressources aux étudiant du cycle 
-                        licence fondamentales dans la faculté Abdelmalek Essadi Tetouan et qui sont 
-                        inscrit dans les différentes filières suivantes :  
-                        <ul>
-                            <li>Sciences Mathématiques Appliquées (SMA).</li>
-                            <li>Sciences Mathématiques Informatiques (SMI).</li>
-                            <li>Sciences de la Matière Physique (SMP).</li>
-                            <li>Sciences de la Matière Chimie (SMC).</li>
-                            <li>Sciences de la Vie (SVI).</li>
-                            <li>Sciences de la Terre et de l'Univers (STU).</li>
-                         </ul>   
-                         </div>                                              
-                      <img src="/assets/photos/graduation.jpg" >
-                      
-                  </div>
-              </div>
-              <p class="tittle-section">Suivez-nous</p>
-              <div class="follow">
-                <div class="icons">
-                    <a href="#" class="icon icon--instagram">
-                      <i class="bi bi-instagram"></i>
-                    </a>
-                    <a href="#" class="icon icon--twitter">
-                      <i class="bi bi-twitter"></i>
-                    </a>
-                    <a href="#" class="icon icon--facebook">
-                      <i class="bi bi-facebook"></i>
-                    </a>
-                    <a href="#" class="icon icon--github">
-                      <i class="bi bi-github"></i>
-                    </a>
-                  </div>
-                </div>
-          </section>       
+  
+</body>
+</html>  
