--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,13 +1,31 @@
-<app-navbar></app-navbar>
-<div class="container1" >
-    <form>
-        <h1>CONTACTEZ-NOUS</h1>
-        <input type="text" id="nom" placeholder="Nom" required>
-        <input type="text" id="prenom" placeholder="Prénom" required>
-        <input type="email" id="email" placeholder="Email" required>
-        <input type="number" id="numero apogee" placeholder="Numéro apogée" required>
-        <h4>Votre message</h4>
-        <textarea required></textarea>
-        <input type="submit" value="Envoyer" id="button">
-    </form>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <app-navbar></app-navbar>
+    </header>
+    <main>
+        <div class="container1" >
+            <form>
+                <h1>CONTACTEZ-NOUS</h1>
+                <input type="text" id="nom" placeholder="Nom" required>
+                <input type="text" id="prenom" placeholder="Prénom" required>
+                <input type="email" id="email" placeholder="Email" required>
+                <input type="number" id="numero apogee" placeholder="Numéro apogée" required>
+                <h4>Votre message</h4>
+                <textarea required></textarea>
+                <input type="submit" value="Envoyer" id="button">
+            </form>
+        </div>
+    </main>
+
+
+
+</body>
+</html>
