--- a/src/app/components/filieres/filieres.component.html
+++ b/src/app/components/filieres/filieres.component.html
@@ -33,7 +33,7 @@
       </article>
       <article class="blog-post">
         <div class="blog-post__img">
-            <img src="assets/photos/info.jpg" alt="">
+            <img src="assets/photos/info.png" alt="">
 
         </div>
         <div class="blog-post__info">
@@ -53,7 +53,7 @@
       </article>
       <article class="blog-post">
         <div class="blog-post__img">
-            <img src="assets/photos/phy.jpg" alt="">
+            <img src="assets/photos/phy.png" alt="">
 
         </div>
         <div class="blog-post__info">
@@ -71,7 +71,7 @@
       </article>
       <article class="blog-post">
         <div class="blog-post__img">
-            <img src="assets/photos/chimie.jpg" alt="">
+            <img src="assets/photos/chimie.png" alt="">
 
         </div>
         <div class="blog-post__info">
@@ -92,7 +92,7 @@
       </article>
       <article class="blog-post">
         <div class="blog-post__img">
-            <img src="assets/photos/sv.jpg" alt="">
+            <img src="assets/photos/sv.png" alt="">
 
         </div>
         <div class="blog-post__info">
@@ -113,7 +113,7 @@
       </article>
       <article class="blog-post">
         <div class="blog-post__img">
-            <img src="assets/photos/st.jpg" alt="">
+            <img src="assets/photos/st.png" alt="">
 
         </div>
         <div class="blog-post__info">
