--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,34 +1,85 @@
-*::before,
-*::after {
+*{
+	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
-}
-.navbar-light .navbar-nav .nav-link
-{
-    color: white;
-}
-.navbar-light .navbar-nav .nav-link.active-link
+	list-style: none;
+	text-decoration: none;
+  }
+  body{
+	font-family: sans-serif;
+	overflow: hidden;
+	user-select: none;
+  }
+  nav .logo{
+	color: white;
+	font-size: 30px;
+	font-weight: bold;
+	line-height: 65px;
+	padding-left: 110px;
+  }
+  nav{
+	height: 60px;
+	background: #FFA500;
+	box-shadow: 0 3px 13px rgba(0,0,0,.4);
+  }
+  nav ul{
+	float: right;
+	margin-right: 30px;
+  }
+  nav ul li{
+	display: inline-block;
+  }
+ nav ul li a.active-link
 {
     color: rgb(121,120,120);
     text-decoration: underline;
 	font-weight: bold;
 
 }
-.container-fluid{
 
-    background-color: #FFA500;
+
+  nav ul li a{
+	color: white;
+	display: block;
+	padding: 0 15px;
+	line-height: 60px;
 	font-size: 20px;
-	font-family:'Poppins', sans-serif;
-	padding-block: 0.5rem;
-	display: flex;
-	max-width: 98rem;
-	margin-inline: auto;
-	padding-inline: 1rem;
-	margin-top: -0.5%;
-	margin-bottom: -0.6%;
+	background: #FFA500;
+	transition: .5s;
+  }
+  nav ul li a:hover{
+	color: rgb(121,120,120);
+  }
+  nav ul ul{
+	position: absolute;
+	top: 85px;
 
-
-}
-a:hover{
-	font-style: italic;
-}
+	opacity: 0;
+	visibility: hidden;
+  }
+  nav ul li:hover > ul{
+	top: 60px;
+	opacity: 1;
+	visibility: visible;
+	transition: .3s linear;
+  }
+  nav ul ul li{
+	width: 160px;
+	display: list-item;
+	position: relative;
+	border: 1px solid #FFA500;
+	border-top: none;
+  }
+  nav ul ul li a{
+	line-height: 50px;
+  }
+  nav ul ul ul{
+	border-top: none;
+  }
+  nav ul ul ul li{
+	position: relative;
+	top: -70px;
+	left: 150px;
+  }
+  nav ul ul li a i{
+	margin-left: 45px;
+  }
