--- a/src/app/components/tableau/tableau.component.html
+++ b/src/app/components/tableau/tableau.component.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>
+      <app-navbar></app-navbar>
+    </header>
     <main>
         <div class="mt-5">
             <table class="table table-bordered">
@@ -19,8 +21,10 @@
                   <th>Email</th>
                   <th>Mot de passe</th>
                   <th>Confirmer mot de passe</th>
+                  <th>Ajouter</th>
                   <th>Modifier</th>
                   <th>Supprimer</th>
+                  
                 </tr>
               </thead>
               <tbody class="tbody" >
@@ -31,8 +35,9 @@
                   <td>{{student.email}}</td>
                   <td>{{student.motdepasse}}</td>
                   <td>{{student.cfmotpasse}}</td>
-                  <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"(click)="edit(student)">Modifier</button></td>
-                  <td><button type="button" class="btn btn-danger" (click)="deleteStudent(student)">Supprimer</button></td>
+                  <td><button mat-raised-button type="button" color="accent" (click)="register(student)">Ajouter</button></td>
+                  <td><button mat-raised-button type="button" color="primary" data-toggle="modal" data-target="#exampleModal"(click)="edit(student)">Modifier</button></td>
+                  <td><button mat-raised-button type="button" color="warn" (click)="deleteStudent(student)">Supprimer</button></td>
                 </tr>
               </tbody>
             </table>
