--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,8 +17,8 @@
          <li>
             <a href="#">SE CONNECTER<i class="fas fa-caret-down"></i></a>
             <ul>
-               <li><a routerLink="/login" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >PROFESSEUR</a></li>
-               <li><a routerLink="/registrer"routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >ETUDIANT</a></li>
+               <li><a routerLink="/loginp" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >PROFESSEUR</a></li>
+               <li><a routerLink="/login"routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >ETUDIANT</a></li>
             </ul>
          </li>
          
