--- a/src/app/components/acceuil/acceuil.component.html
+++ b/src/app/components/acceuil/acceuil.component.html
@@ -22,7 +22,7 @@
           <p class="tittle-section">Presentation</p>
           <div class="description-photo">
             <div class="desc">
-                Notre site ".............." a été crée a fin de donner un coup de main
+                Notre site "YAS" a été crée a fin de donner un coup de main
                 pour faciliter leurs études et arrondir les ressources aux étudiant du cycle 
                 licence fondamentales dans la faculté Abdelmalek Essadi Tetouan et qui sont 
                 inscrit dans les différentes filières suivantes :  
