--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav>
-      <label class="logo">Logo</label>
+      <img src="../../../assets/photos/IMG_6409.jpg" width="130px" height="70px" id=logo alt="Logo image" style="margin-left: 70px;" />
       <ul>
          <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/" >ACCEUIL</a></li>
          <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/filieres" >FILIERES</a></li>
