--- a/src/app/components/tableau/tableau.component.css
+++ b/src/app/components/tableau/tableau.component.css
@@ -4,11 +4,17 @@
     margin-top: 10px;
 
 }
+body {
+  background: linear-gradient(135deg, rgb(121,120,120), #f0b851);
+}
 thead{
-    background: linear-gradient(135deg, rgb(121,120,120), #f0b851);
+    background: #FFA500 /* linear-gradient(135deg, rgb(121,120,120), #f0b851);*/
 }
 table{
     margin-top: 6px;
+}
+td{
+  background: white;
 }
 .card{
         max-width: 700px;
@@ -20,7 +26,7 @@ table{
         backdrop-filter: blur(10px);
         margin-left: 400px;
         margin-top: 20px;
-        background: linear-gradient(135deg, rgb(121,120,120), #f0b851);
+       /* background: linear-gradient(135deg, rgb(121,120,120), #f0b851);*/
 }
 .content form .user-details{
     display: flex;
