--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -12,13 +12,13 @@
   <body>
       <div class="wrapper">
         <div class="title">Se connecter</div>
-        <form action="#">
+        <form #loginform="ngForm" (ngSubmit)="loginStudent()" action="#">
           <div class="field">
-            <input type="email" required [(ngModel)]="email" [ngModelOptions]="{standalone: true}">
+            <input type="email" [(ngModel)]="student.email" id="email" name="email">
             <label>Adresse email</label>
           </div>
           <div class="field">
-            <input type="password" required [(ngModel)]="password" [ngModelOptions]="{standalone: true}" >
+            <input type="password" [(ngModel)]="student.motdepasse" id="motdepasse" name="motdepasse">
             <label>Mot de passe</label>
           </div>
           <div class="content">
