--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,77 +1,182 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 *{
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	text-decoration: none;
-  }
-  body{
-	font-family: sans-serif;
-	overflow: hidden;
-	user-select: none;
-  }
- 
-  nav{
-	height: 61px;
-	background: #FFA500;
-	box-shadow: 0 3px 13px rgba(0,0,0,.4);
-  }
-  nav ul{
-	float: right;
-	margin-right: 30px;
-  }
-  nav ul li{
-	display: inline-block;
-  }
- nav ul li a.active-link
+  margin: 0;
+  padding: 0;
+  user-select: none;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+body{
+  background: #f2f2f2;
+}
+nav{
+  background: #FFA500;
+}
+nav:after{
+  content: '';
+  clear: both;
+  display: table;
+}
+nav .logo{
+  float: left;
+  color: white;
+  font-size: 27px;
+  font-weight: 600;
+  line-height: 70px;
+  padding-left: 60px;
+}
+nav ul{
+  float: right;
+  margin-right: 40px;
+  list-style: none;
+  position: relative;
+}
+nav ul li{
+  
+  display: inline-block;
+  background: #FFA500;
+  margin: 0 5px;
+}
+nav ul li a.active-link
 {
     color: rgb(121,120,120);
     text-decoration: underline;
 	font-weight: bold;
-
 }
-
-  nav ul li a{
-	color: white;
-	display: block;
-	padding: 0 15px;
-	line-height: 60px;
-	font-size: 20px;
-	background: #FFA500;
-	transition: .5s;
+nav ul li a{
+  color: white;
+  line-height: 70px;
+  text-decoration: none;
+  font-size: 18px;
+  padding: 8px 15px;
+}
+nav ul li a:hover{
+	color: rgb(121,120,120);
+}
+nav ul ul li a:hover{
+  box-shadow: none;
+}
+nav ul ul{
+  position: absolute;
+  top: 85px;
+  border-top: 0px ;
+  opacity: 0;
+  visibility: hidden;
+  transition: top .3s;
+}
+nav ul ul ul{
+  border-top: none;
+}
+nav ul li:hover > ul{
+  top: 60px;
+  opacity: 1;
+  visibility: visible;
+}
+nav ul ul li{
+  position: relative;
+  margin: 0px;
+  width: 150px;
+  float: none;
+  display: list-item;
+  border-bottom: 1px solid rgba(0,0,0,0.3);
+}
+nav ul ul li a{
+  line-height: 50px;
+}
+nav ul ul ul li{
+  position: relative;
+  top: -60px;
+  left: 150px;
+}
+.show,.icon,input{
+  display: none;
+}
+.fa-plus{
+  font-size: 15px;
+  margin-left: 40px;
+}
+@media all and (max-width: 968px) {
+  nav ul{
+    margin-right: 0px;
+    float: left;
+  }
+  nav .logo{
+    padding-left: 30px;
+    width: 100%;
+  }
+  .show + a, ul{
+    display: none;
+  }
+  nav ul li,nav ul ul li{
+    display: block;
+    width: 100%;
   }
   nav ul li a:hover{
-	color: rgb(121,120,120);
+    box-shadow: none;
+  }
+  .show{
+    display: block;
+    color: white;
+    font-size: 18px;
+    padding: 0 20px;
+    line-height: 70px;
+    cursor: pointer;
+  }
+  .show:hover{
+    color: cyan;
+  }
+  .icon{
+    display: block;
+    color: white;
+    position: absolute;
+    top: 0;
+    right: 40px;
+    line-height: 70px;
+    cursor: pointer;
+    font-size: 25px;
   }
   nav ul ul{
-	position: absolute;
-	top: 85px;
-	opacity: 0;
-	visibility: hidden;
+    top: 70px;
+    border-top: 0px;
+    float: none;
+    position: static;
+    display: none;
+    opacity: 1;
+    visibility: visible;
   }
-  nav ul li:hover > ul{
-	top: 60px;
-	opacity: 1;
-	visibility: visible;
-	transition: .3s linear;
+  nav ul ul a{
+    padding-left: 40px;
   }
-  nav ul ul li{
-	width: 160px;
-	display: list-item;
-	position: relative;
-	border: 1px solid #FFA500;
-	border-top: none;
-  }
-  nav ul ul li a{
-	line-height: 50px;
-  }
-  nav ul ul ul{
-	border-top: none;
+  nav ul ul ul a{
+    padding-left: 80px;
   }
   nav ul ul ul li{
-	position: relative;
-	top: -70px;
-	left: 150px;
+    position: static;
   }
-  nav ul ul li a i{
-	margin-left: 45px;
+  [id^=btn]:checked + ul{
+    display: block;
   }
+  nav ul ul li{
+    border-bottom: 0px;
+  }
+  span.cancel:before{
+    content: '\f00d';
+  }
+}
+.content{
+  z-index: -1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  text-align: center;
+}
+header{
+  font-size: 35px;
+  font-weight: 600;
+  padding: 10px 0;
+}
+p{
+  font-size: 30px;
+  font-weight: 500;
+}
