--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,8 +10,9 @@
    </head>
    <body>
       <nav>
-         <div class="logo">
+         <div class="logo" ><a routerLink="/logina">
             <img src="../../../assets/photos/IMG_6409.jpg" width="130px" height="70px" id=logo alt="Logo image" style="margin-left: 70px;" />
+           </a>
          </div>
          <label for="btn" class="icon">
          <span class="fa fa-bars"></span>
