--- a/src/app/components/registrer/registrer.component.html
+++ b/src/app/components/registrer/registrer.component.html
@@ -38,8 +38,7 @@
           </div>
           <div class="input-box">
             <span class="details">Confirmer mot de passe</span>
-            <input type="password" placeholder="Confirmer votre mot de passe" #cfmotpasse (ngModel)="cfmotpasse" name="cfmotpasse" id="cfmotpasse"
-             pattern="{{student.motdepasse}}">
+            <input type="password" placeholder="Confirmer votre mot de passe" #cfmotpasse (ngModel)="cfmotpasse" name="cfmotpasse" id="cfmotpasse" >
           </div>
         </div>
         <div class="button" >
