--- a/src/app/components/logina/logina.component.html
+++ b/src/app/components/logina/logina.component.html
@@ -12,13 +12,13 @@
   <body>
       <div class="wrapper">
         <div class="title">Se connecter</div>
-        <form #loginform="ngForm" (ngSubmit)="loginStudent()" action="#">
+        <form #loginform="ngForm" (ngSubmit)="loginAdmin()" action="#">
           <div class="field">
-            <input type="email" [(ngModel)]="student.email" id="email" name="email">
+            <input type="email" [(ngModel)]="admin.email" id="email" name="email" >
             <label>Adresse email</label>
           </div>
           <div class="field">
-            <input type="password" [(ngModel)]="student.motdepasse" id="motdepasse" name="motdepasse">
+            <input type="password" [(ngModel)]="admin.motdepasse" id="motdepasse" name="motdepasse" >
             <label>Mot de passe</label>
           </div>
           <div class="content">
@@ -31,8 +31,6 @@
           <div class="field">
             <input type="submit" value="Se Connecter">
           </div>
-          <div class="signup-link"> <a routerLink="/registrer">S'inscrire</a></div>
-     
         </form>
       </div>
     
