--- a/src/app/components/loginp/loginp.component.html
+++ b/src/app/components/loginp/loginp.component.html
@@ -26,7 +26,7 @@
               <input type="checkbox" id="remember-me">
               <label for="remember-me">Se souvenir de moi</label>
             </div>
-            <div class="pass-link"><a href="#">Mot de passe oublié ?</a></div>
+            <div class="pass-link"><a routerLink="/mpoublier">Mot de passe oublié ?</a></div>
           </div>
           <div class="field">
             <input type="submit" value="Se Connecter">
