--- a/src/app/components/tableau/tableau.component.html
+++ b/src/app/components/tableau/tableau.component.html
@@ -24,7 +24,7 @@
             </div>
             <div class="input-box">
               <span class="details">Email :</span>
-              <input type="email" placeholder="Entrer votre email" #email (ngModel)="email" name="email" id="email">
+              <input type="email"  placeholder="Entrer votre email" #email (ngModel)="email" name="email" id="email">
             </div>
             <div class="input-box">
               <span class="details">Numéro apogée :</span>
@@ -100,8 +100,8 @@
                   </div>
                   <div class="form-group">
                     <label for="email">Email :</label>
-                    <input type="text" #email [(ngModel)]="studentToUpdate.email" name="email" id="email"
-                      class="form-control" placeholder="Entrer votre Email">
+                    <input type="email" #email [(ngModel)]="studentToUpdate.email" name="email" id="email" class="form-control"
+                     placeholder="Entrer votre Email">
                   </div>
                   <div class="form-group">
                     <label for="motdepasse">Mot de passe :</label>
