--- a/src/app/components/tableau-p/tableau-p.component.html
+++ b/src/app/components/tableau-p/tableau-p.component.html
@@ -82,6 +82,7 @@
                     <input type="text"  #nom [(ngModel)]="profToUpdate.nom" name="nom" id="nom"
                       class="form-control" placeholder="Entrer votre Nom">
                   </div>
+                  
                   <div class="form-group">
                     <label for="prenom">Prénom :</label>
                     <input type="text" #prenom [(ngModel)]="profToUpdate.prenom" name="prenom" id="name" class="form-control"
@@ -94,7 +95,7 @@
                   </div>
                   <div class="form-group">
                     <label for="email">Email :</label>
-                    <input type="text" #email [(ngModel)]="profToUpdate.email" name="email" id="email"
+                    <input type="email" #email [(ngModel)]="profToUpdate.email" name="email" id="email"
                       class="form-control" placeholder="Entrer votre Email">
                   </div>
                   <div class="form-group">
