--- a/src/app/components/registrer/registrer.component.html
+++ b/src/app/components/registrer/registrer.component.html
@@ -26,7 +26,7 @@
           </div>
           <div class="input-box">
             <span class="details">Email</span>
-            <input type="email" placeholder="Entrer votre email" #email (ngModel)="email" name="email" id="email">
+            <input formControlName="email" type="email" placeholder="Entrer votre email" #email (ngModel)="email" name="email" id="email">
           </div>
           <div class="input-box">
             <span class="details">Numéro apogée</span>
