--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -14,10 +14,11 @@
     align-items: center;
     background: linear-gradient(135deg, rgb(121,120,120), #f0b851);
 }
+    
 
 .container1 form{
     width: 670px;
-    height: 420px;
+    height: 440px;
     display: flex;
     justify-content: center;
     box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
@@ -28,7 +29,11 @@
     background-color: white;
 
 }
-
+.alert{
+    margin:10px;
+    width: 600px;
+    height: 40px;
+}
 .container1 form h1{
     color: rgb(121,120,120);
     font-weight: 500;
