--- a/src/app/components/tableau-p/tableau-p.component.html
+++ b/src/app/components/tableau-p/tableau-p.component.html
@@ -94,7 +94,7 @@
                   </div>
                   <div class="form-group">
                     <label for="email">Email :</label>
-                    <input type="text" #email [(ngModel)]="profToUpdate.email" name="email" id="email"
+                    <input type="email" #email [(ngModel)]="profToUpdate.email" name="email" id="email"
                       class="form-control" placeholder="Entrer votre Email">
                   </div>
                   <div class="form-group">
