--- a/src/app/components/tableau/tableau.component.html
+++ b/src/app/components/tableau/tableau.component.html
@@ -100,7 +100,7 @@
                   </div>
                   <div class="form-group">
                     <label for="email">Email :</label>
-                    <input type="text" #email [(ngModel)]="studentToUpdate.email" name="email" id="email"
+                    <input type="email" #email [(ngModel)]="studentToUpdate.email" name="email" id="email"
                       class="form-control" placeholder="Entrer votre Email">
                   </div>
                   <div class="form-group">
